[package]
name = "lipstick"
version = "0.1.0"
authors = ["Roberto Vidal <vidal.roberto.j@gmail.com>"]
edition = "2018"
repository = "https://github.com/jrvidal/lipstick"
description = "Lipstick for C"
license = "GPL-3.0-or-later"

[dependencies]
clap = "2.33.3"
proc-macro2 = { version = "1.0.26", features = ["span-locations"] }
regex = "1"
syn = { version = "1.0.67", default-features = false, features = ["full", "parsing", "printing"] }
tempfile = "3.2.0"
