[package]
name = "lipstick"
version = "0.2.0"
authors = ["Roberto Vidal <vidal.roberto.j@gmail.com>"]
edition = "2018"
repository = "https://github.com/jrvidal/lipstick"
description = "Lipstick for C"
license = "GPL-3.0-or-later"

[features]
dev = ["syn/extra-traits"]

[dependencies]
clap = "2.33.3"
codespan-reporting = "0.11.1"
proc-macro2 = { version = "1.0.26", features = ["span-locations"] }
string-interner = "0.12.2"
syn = { version = "1.0.67", default-features = false, features = ["full", "parsing", "printing", "visit"] }
