[package]
name = "lipstick"
version = "0.3.0"
authors = ["Roberto Vidal <vidal.roberto.j@gmail.com>"]
edition = "2021"
repository = "https://github.com/jrvidal/lipstick"
description = "Lipstick for C"
license = "GPL-3.0-or-later"

[features]
dev = ["compiler/dev"]

[dependencies]
clap = "2.33.3"
compiler = { package = "lipstick_compiler", path = "../compiler", version = "0.3.0" }
