[package]
name = "lipstick_compiler"
version = "0.4.0"
authors = ["Roberto Vidal <vidal.roberto.j@gmail.com>"]
edition = "2021"
repository = "https://github.com/jrvidal/lipstick"
description = "Lipstick for C"
license = "GPL-3.0-or-later"

[features]
dev = ["syn/extra-traits"]

[dependencies]
codespan-reporting = "0.11.1"
proc-macro2 = { version = "1.0.32", features = ["span-locations"] }
string-interner = "0.12.2"
syn = { version = "1.0.82", default-features = false, features = ["full", "parsing", "printing", "visit"] }
